<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/forma"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/titulo"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/nomtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mensajen"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edadtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mensajedad"
                    android:inputType="number" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/mascr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/masct" />

                    <RadioButton
                        android:id="@+id/femr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/femt" />

                    <RadioButton
                        android:id="@+id/nor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/forma"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/titulo2"
                        android:textColor="@color/white"
                        android:textSize="24sp" />
                </RadioGroup>

                <CheckBox
                    android:id="@+id/clibro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gusto1" />

                <CheckBox
                    android:id="@+id/cplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gusto2" />

                <CheckBox
                    android:id="@+id/cdiseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gusto3" />

                <TextView
                    android:id="@+id/saltext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/benviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/botonforma"
                    android:onClick="mostrar"
                    android:text="@string/benviart" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>